// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should render the embed header 1`] = `
<div
  className=""
>
  <div
    className="c-dashboard__heading o-max-width"
  >
    <div
      className="o-max-width__inner"
    >
      <div
        className="qa-dashboard__embed-header"
      >
        <AngularWrapper
          bindings={
            Object {
              "closeAction": Object {
                "meta": Object {
                  "tracking": true,
                },
                "type": "ui/HIDE_EMBED_PREVIEW",
              },
            }
          }
          component="dpEmbedHeader"
          dependencies={
            Array [
              "atlas",
            ]
          }
          interpolateBindings={Object {}}
          moduleName="dpHeaderWrapper"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Header should render the main header 1`] = `
<section
  className="styled-header"
>
  <Header
    css={
      Array [
        "
  ",
        ".sc-cvbbAY",
        " {
    @media screen and ",
        "(min-width: 768.02px)",
        " {
      justify-content: space-between;
    }

    fieldset > ",
        ".sc-jDwBTQ",
        " {
      flex-grow: 1;
      max-width: 80%;

      ",
        ".sc-jAaTju",
        " {
        flex-grow: 0;
        width: 100%;
      }
    }
  }
",
      ]
    }
    fullWidth={false}
    homeLink="/"
    navigation={
      <React.Fragment>
        <Connect(HeaderSearch) />
        <MenuDefault
          onExpand={[Function]}
          showAt="laptopM"
        />
        <MenuMobile
          hideAt="laptopM"
          onExpand={[Function]}
        />
      </React.Fragment>
    }
    tall={false}
    title="City Data"
  />
</section>
`;

exports[`Header should render the print header 1`] = `
<div
  className=""
>
  <div
    className="c-dashboard__heading o-max-width"
  >
    <div
      className="o-max-width__inner"
    >
      <div
        className="qa-dashboard__print-header"
      >
        <AngularWrapper
          bindings={
            Object {
              "closeAction": Object {
                "meta": Object {
                  "tracking": true,
                },
                "type": "ui/HIDE_PRINT",
              },
            }
          }
          component="dpPrintHeader"
          dependencies={
            Array [
              "atlas",
            ]
          }
          interpolateBindings={Object {}}
          moduleName="dpHeaderWrapper"
        />
      </div>
    </div>
  </div>
</div>
`;
